--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^5.2.1",
