--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
+    "otp-generator": "^4.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
