--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "otp-generator": "^4.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
